--- a/Untitled4.ipynb
+++ b/Untitled4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNXbsK/4FMdpl6Z5cDkiuxC",
+      "authorship_tag": "ABX9TyMfRqLA3ycTbtfZPmCkdkLL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,12 +35,12 @@
       "metadata": {
         "id": "vlN1Kw0IpxA5"
       },
-      "execution_count": 9,
+      "execution_count": 13,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 14,
       "metadata": {
         "id": "dFb679XQpGWv"
       },
@@ -71,7 +71,7 @@
         "names = { rock:\"Rock\", paper:\"Paper\", scissors:\"Scissors\" }\n",
         "rules = { rock: scissors, paper: rock, scissors: paper }\n",
         "\n",
-        "player_scors = 0\n",
+        "player_score = 0\n",
         "computer_score = 0\n",
         "\n",
         "def start():\n",
@@ -89,7 +89,7 @@
         "def move():\n",
         "  while True:\n",
         "      print()\n",
-        "      player = raw_input( \"Rock = 1/nPaper = 2/nScissor = 3/nMake = move: \" )\n",
+        "      player = input( \"Rock = 1/nPaper = 2/nScissor = 3/nMake = move: \" )\n",
         "      try:\n",
         "        player = int(player)\n",
         "        if player in (1,2,3):\n",
@@ -108,22 +108,57 @@
         "    print(\"Computer threw {0}!\". format (names[computer]))\n",
         "    global player_score, computer_score\n",
         "    if player == computer:\n",
-        "        print( \"Tie game.\" )\n",
+        "        print( \"Tie game\" )\n",
         "    else:\n",
         "        if rules[player] == computer:\n",
-        "            print( \"Your victory has been ensured.\" )\n",
-        "            player_score += 1\n",
+        "           print( \"Your victory has been ensured.\" )\n",
+        "           player_score += 1\n",
+        "        else:\n",
+        "           print( \"The computer laughs as you realise you have been defeated.\" )\n",
+        "           computer_score += 1\n",
+        "\n",
+        "def play_again():\n",
+        "    answer = input( \"Would you like to pay again? y/n: \" )\n",
+        "    if answer in ( \"y\", \"Y\", \"yes\", \"Yes\", \"of course!\" ):\n",
+        "        return answer\n",
+        "    else:\n",
+        "        print( \"Thank you very much for playing our game. See you next time!\" )\n",
         "\n",
         "\n",
-        "\n",
-        "\n",
-        "\n"
+        "def scores():\n",
+        "    global player_score, computer_score\n",
+        "    print( \"HIGH SCORES\" )\n",
+        "    print( \"Player:, player_score\" )\n",
+        "    print( \"Computer:, computer_score\" )\n",
+        "if __name__ == '__main__':\n",
+        "     start()"
       ],
       "metadata": {
-        "id": "E2Ce6F4EqvqP"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "E2Ce6F4EqvqP",
+        "outputId": "64cdca95-da5a-418f-c1a2-70cb3e12f9d4"
       },
-      "execution_count": 11,
-      "outputs": []
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Let's play a game of Rock, Paper, Scissors. \n",
+            "\n",
+            "Rock = 1/nPaper = 2/nScissor = 3/nMake = move: 2\n",
+            "1...\n",
+            "2...\n",
+            "3!\n",
+            "Computer threw Paper!\n",
+            "Tie game\n",
+            "Would you like to pay again? y/n: yes\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
